--- a/package.json
+++ b/package.json
@@ -18,14 +18,25 @@
     "fix:eslint": "eslint src --fix",
     "fix:stylelint": "stylelint \"src/**/*.{css,scss}\" --fix",
     "fix:prettier": "prettier --write *.{md,json}",
-    "latest": "yarn upgrade-interactive --latest"
+    "latest": "yarn upgrade-interactive --latest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "d3-fetch": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/react-vite": "^7.0.18",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/d3-fetch": "^3.0.2",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -43,14 +54,17 @@
     "fs-extra": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "prop-types": "^15.8.1",
     "sanitize.css": "^13.0.0",
     "sass": "^1.58.1",
+    "storybook": "^7.0.18",
     "stylelint": "^15.1.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recess-order": "^4.0.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-prettier": "^2.0.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
