--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "d3-array": "^3.2.4",
+    "d3-axis": "^3.0.0",
     "d3-fetch": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -36,7 +40,11 @@
     "@storybook/react": "^7.0.18",
     "@storybook/react-vite": "^7.0.18",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/d3-array": "^3.0.5",
+    "@types/d3-axis": "^3.0.2",
     "@types/d3-fetch": "^3.0.2",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.5",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -51,6 +59,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "fs-extra": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
@@ -66,6 +75,6 @@
     "stylelint-prettier": "^2.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "vite": "^4.3.9"
   }
 }
