Add react router

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.18",
