--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3-axis": "^3.0.0",
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +46,7 @@
     "@types/d3-axis": "^3.0.2",
     "@types/d3-fetch": "^3.0.2",
     "@types/d3-scale": "^4.0.3",
+    "@types/d3-scale-chromatic": "^3.0.0",
     "@types/d3-selection": "^3.0.5",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.17",
