--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.4",
     "clsx": "^1.2.1",
     "d3-array": "^3.2.4",
     "d3-axis": "^3.0.0",
@@ -63,6 +66,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-tailwindcss": "^3.12.1",
     "fs-extra": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
