--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "d3-selection": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
