--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/react": "^7.0.18",
     "@storybook/react-vite": "^7.0.18",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/d3-array": "^3.0.5",
     "@types/d3-axis": "^3.0.2",
     "@types/d3-fetch": "^3.0.2",
